0.2.0 (in development)
----------------------
* Add container_remove() method.

0.1.0 (2016-08-13)
------------------
First development release