@@ -1,6 +1,7 @@
 0.2.0 (in development)
 ----------------------
 * Add container_remove() method.
+* Add container_start() method.
 
 0.1.0 (2016-08-13)
 ------------------
